@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-16T01:42:52Z",
+  "timestamp" : "2022-06-16T08:25:53Z",
   "count_outdated" : 2155,
   "uniques_outdated" : 431,
   "count" : 2187,
-  "uniques" : 452,
+  "uniques" : 453,
   "clones" : [
     {
       "timestamp": "2022-06-02T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
